objects/AcctSeed__Financial_Report_Row__c.object
<CustomObject>
    <description>Defines row based formatting and configuration settings for a specific row in a financial report. This record is associated with a financial report definition and is used in the financial suite report writer.</description>
    <fields>
        <fullName>AcctSeed__Calculation__c</fullName>
        <label>Calculation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Financial_Report_Definition__c</fullName>
        <label>Financial Statement Definition</label>
        <referenceTo>AcctSeed__Financial_Report_Definition__c</referenceTo>
        <relationshipLabel>Financial Statement Rows</relationshipLabel>
        <relationshipName>Financial_Report_Rows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Reporting_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account Reporting Group</label>
        <referenceTo>AcctSeed__GL_Account_Reporting_Group__c</referenceTo>
        <relationshipLabel>Financial Statement Rows</relationshipLabel>
        <relationshipName>Financial_Report_Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Rows (GL Account Variable 1)</relationshipLabel>
        <relationshipName>Financial_Report_Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Rows (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Financial_Report_Rows1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Statement Rows (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Financial_Report_Rows2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>notContain</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Financial Statement Rows</relationshipLabel>
        <relationshipName>Financial_Report_Rows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Indent__c</fullName>
        <label>Indent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Normal_Balance__c</fullName>
        <label>Normal Balance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                    <default>true</default>
                    <label>Debit</label>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Row_Label__c</fullName>
        <label>Row Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Suppress_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GL Account</fullName>
                    <default>true</default>
                    <label>GL Account</label>
                </value>
                <value>
                    <fullName>Reporting Group</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Calculation Number</fullName>
                </value>
                <value>
                    <fullName>Calculation %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Underline__c</fullName>
        <label>Underline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Financial Statement Row</label>
    <nameField>
        <displayFormat>FRW-{00000}</displayFormat>
        <label>Financial Statement Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Statement Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>